# HWBLDCController

./: BLDCCtrl.vhdl  BLDCCtrl_pwm.vhdl
SPI/: CMakeLists.txt  clean_cmake.sh  sc_spi.h  spi_defines.h  spi_main.cpp  tb_spi.h  tb_spi_slave.h
